--- a/package.json
+++ b/package.json
@@ -1,32 +1,37 @@
 {
-  "name": "blogshepelnet",
-  "version": "0.1.1",
+  "name": "blog.shepel.net",
+  "version": "1.0.0",
   "private": true,
-  "main": "gulpfile.js",
   "scripts": {
-    "dev": "gulp",
-    "build": "rm -rf docs && gulp build && cp CNAME docs/CNAME && cp robots.txt docs/robots.txt"
+    "dev": "nuxt",
+    "build": "nuxt build && nuxt generate && cp CNAME docs/CNAME",
+    "start": "nuxt start",
+    "generate": "nuxt generate && cp CNAME docs/CNAME",
+    "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
+    "lint:prettier": "prettier --check .",
+    "lint": "npm run lint:js && npm run lint:prettier",
+    "lintfix": "prettier --write --list-different . && npm run lint:js -- --fix"
   },
-  "author": "Shepel",
-  "license": "UNLICENSED",
-  "browserslist": [
-    "last 3 versions"
-  ],
+  "dependencies": {
+    "@nuxt/content": "^1.0.0",
+    "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/yandex-metrika": "^1.4.0",
+    "core-js": "^3.25.3",
+    "nuxt": "^2.15.8",
+    "vue": "^2.7.10",
+    "vue-server-renderer": "^2.7.10",
+    "vue-template-compiler": "^2.7.10",
+    "vuetify": "^2.6.10"
+  },
   "devDependencies": {
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^8.0.0",
-    "gulp-babel-minify": "^0.5.1",
-    "gulp-cheerio": "^1.0.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-cssnano": "^2.1.3",
-    "gulp-file-include": "^2.3.0",
-    "gulp-footer": "^2.0.2",
-    "gulp-header": "^2.0.9",
-    "gulp-imagemin": "^7.1.0",
-    "gulp-sass": "^5.0.0",
-    "gulp-svg-sprite": "^1.5.0",
-    "gulp-svgmin": "^3.0.0",
-    "gulp-util": "^3.0.8",
-    "node-sass": "^6.0.1"
+    "@babel/eslint-parser": "^7.19.1",
+    "@nuxtjs/eslint-config": "^11.0.0",
+    "@nuxtjs/eslint-module": "^3.1.0",
+    "@nuxtjs/vuetify": "^1.12.3",
+    "eslint": "^8.24.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-nuxt": "^4.0.0",
+    "eslint-plugin-vue": "^9.5.1",
+    "prettier": "^2.7.1"
   }
 }
